test/error/ConstructorParameters2.ci
public class Test
{
	public Test(Test) { //ERROR: Constructor parameters not supported
	}
}
